--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,3 +1,8 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'blog/index.css' %}">
+
+<h1>My pet blog</h1>
+<h5>Author: Kamil Rizatdinov</h5>
 {% if latest_posts_list %}
     <ul>
     {% for post in latest_posts_list %}
