--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,17 +1,25 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'blog/index.css' %}">
-
-<h1>My pet blog</h1>
-<h5>Author: Kamil Rizatdinov</h5>
-{% if latest_posts_list %}
-    <ul>
-    {% for post in latest_posts_list %}
-        <li>
-            <a href="{% url 'blog:detail' post.id%}">{{ post.header }}</a>
-            <p>{{ post.views }}</p>
-        </li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No posts are available.</p>
-{% endif %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Blog</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'blog/index.css' %}">
+</head>
+<body>
+    <h1>My pet blog</h1>
+    <h5>Author: Kamil Rizatdinov</h5>
+    {% if latest_posts_list %}
+        <ul>
+        {% for post in latest_posts_list %}
+            <li>
+                <a href="{% url 'blog:detail' post.id%}">{{ post.header }}</a>
+                <p>{{ post.views }}</p>
+            </li>
+        {% endfor %}
+        </ul>
+    {% else %}
+        <p>No posts are available.</p>
+    {% endif %}
+</body>
+</html>
