--- a/static/blog/index.css
+++ b/static/blog/index.css
@@ -1,9 +1,16 @@
+* {
+	margin: 0px;
+	padding: 0px;
+	box-sizing: border-box;
+}
+
 li {
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
-    border: 2px solid black;
+    border: 2px solid yellow;
+    background-color: blue;
     list-style-type: none;
 }
