--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -7,30 +7,29 @@
     <link rel="stylesheet" type="text/css" href="{% static 'blog/index.css' %}">
 </head>
 <body>
-    <h1>My pet blog</h1>
-    <h5>Author: Kamil Rizatdinov</h5>
+    <div class="form-holder">
+        <form id="input-form" method="post" action="{% url 'blog:publish' %}">
+            {% csrf_token %}
+            <label>Create a new post</label><br>
+            <input class="input-area" type="text" name="header" maxlength="50" placeholder="Title" required><br>
+            <textarea class="input-area" cols="60" rows="10" name="text" placeholder="Content" form="input-form" required></textarea><br>
+            <input type="submit">
+        </form>
+    </div>
 
-    <form method="post" action="{% url 'blog:publish' %}">
-        {% csrf_token %}
-        <label>Create a new post</label><br>
-        Title<br>
-        <input type="text" name="header" maxlength="50" required><br>
-        Content<br>
-        <input type="text" name="text" maxlength="1000" required><br>
-        <input type="submit">
-    </form>
-
-    {% if latest_posts_list %}
-        <ul>
-        {% for post in latest_posts_list %}
-            <li>
-                <a href="{% url 'blog:detail' post.id%}">{{ post.header }}</a>
-                <p>{{ post.views }}</p>
-            </li>
-        {% endfor %}
-        </ul>
-    {% else %}
-        <p>No posts are available.</p>
-    {% endif %}
+    <div class="content-holder">
+        {% if latest_posts_list %}
+            <ul>
+            {% for post in latest_posts_list %}
+                <li>
+                    <a class="article" href="{% url 'blog:detail' post.id%}">{{ post.header }}</a>
+                    <p>{{ post.views }} 👁</p>
+                </li>
+            {% endfor %}
+            </ul>
+        {% else %}
+            <p>No posts are available.</p>
+        {% endif %}
+    </div>
 </body>
 </html>
