Add restriction to the max length of textarea

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -14,7 +14,7 @@
                 <label>CREATE NEW POST</label><br>
             </div>
             <input class="input-area" type="text" name="header" maxlength="50" placeholder="Title" required><br>
-            <textarea class="input-area" cols="60" rows="10" name="text" placeholder="Content" form="input-form" required></textarea><br>
+            <textarea maxlength="1000" class="input-area" cols="60" rows="10" name="text" placeholder="Content" form="input-form" required></textarea><br>
             <input type="submit">
         </form>
     </div>
