--- a/static/contributors/index.css
+++ b/static/contributors/index.css
@@ -5,10 +5,10 @@
 }
 
 .contributor-holder {
-    width: 20%;
+    width: 14%;
     box-shadow: 5px 5px 5px 5px rgba(110, 110, 110, 0.32);
     margin: 2.5%;
-    float: left;
+    display: inline-block;
 }
 
 .avatar-holder img {
