Add header into the contributors:index

--- a/templates/contributors/index.html
+++ b/templates/contributors/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'contributors/index.css' %}">
 </head>
 <body>
+    <div class="header-holder">
+        <h1>Special thanks to this guys 🔥🔥🔥</h1>
+    </div>
+
     {% for contributor in contributors %}
         <div class="contributor-holder">
             <div class="avatar-holder">
