--- a/static/contributors/index.css
+++ b/static/contributors/index.css
@@ -4,6 +4,12 @@
 	box-sizing: border-box;
 }
 
+.header-holder {
+    background-color: #ffe0ad;
+    text-align: center;
+    padding: 30px 0 30px 0;
+}
+
 .contributor-holder {
     width: 14%;
     box-shadow: 5px 5px 5px 5px rgba(110, 110, 110, 0.32);
@@ -13,10 +19,4 @@
 
 .avatar-holder img {
     max-width: 100%;
-}
-
-.login-holder {
-}
-
-.commits-holder {
 }
