Removed contributors application entierly, since I don't need it in this project. You can find contributors page on ..blog/contributors/ entry

--- a/templates/blog/contributors.html
+++ b/templates/blog/contributors.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contributors</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'contributors/index.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'blog/contributors.css' %}">
 </head>
 <body>
     <div class="header-holder">
