Integrated menu template into html of the pages

--- a/templates/blog/contributors.html
+++ b/templates/blog/contributors.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'blog/contributors.css' %}">
 </head>
 <body>
+    {% include 'blog/menu_template.html' %}
     <div class="header-holder">
         <h1>Special thanks to this guys 🔥🔥🔥</h1>
     </div>
