Reformation of styling in the project

--- a/static/blog/contributors.css
+++ b/static/blog/contributors.css
@@ -5,7 +5,7 @@
 }
 
 .header-holder {
-    background-color: #ffe0ad;
+    background-color: #379683;
     text-align: center;
     padding: 30px 0 30px 0;
 }
