--- a/static/blog/detail.css
+++ b/static/blog/detail.css
@@ -8,7 +8,7 @@
     padding: 30px 0 30px 0;
     text-align: center;
     overflow-y:scroll;
-    background-color: #ffe0ad;
+    background-color: #379683;
 }
 
 .text-holder {
@@ -23,5 +23,14 @@
     width: 100%;
     height: 10%;
     text-align: center;
-    background-color: #ffe0ad;
+    background-color: #379683;
+}
+
+button {
+    background-color: rgb(43, 40, 40);
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    font-size: 16px;
 }
