--- a/static/blog/index.css
+++ b/static/blog/index.css
@@ -4,12 +4,8 @@
 	box-sizing: border-box;
 }
 
-body {
-    background-image: url("https://images.unsplash.com/photo-1480714378408-67cf0d13bc1b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-    background-attachment: fixed;
-}
-
 .form-holder {
+    background-color: #379683;
     padding: 100px 0 100px 0;
     display: flex;
 }
@@ -32,7 +28,7 @@ form {
     padding: 10px;
 }
 
-li {
+.post_list li {
     float: left;
     background-color: white;
     text-align: center;
@@ -47,6 +43,15 @@ li {
 }
 
 .header-holder {
-    background-color: #ffe0ad;
+    background-color: #5CDB95;
+    text-align: center;
+}
+
+.button {
+    background-color: rgb(43, 40, 40);
+    margin-top: 5px;
+    border: none;
+    color: white;
+    padding: 10px 20px;
     text-align: center;
 }
