Add publication date

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -32,7 +32,7 @@
                         <p>{{ post.text }}</p>
                     </div>
                     <div class="views-holder">
-                        <p>{{ post.views }} 👁</p>
+                        <p>{{ post.publication_date }} | Views: {{ post.views }}</p>
                     </div>
                 </li>
             {% endfor %}
